--- a/w2_slides.bib
+++ b/w2_slides.bib
@@ -1,67 +1,83 @@
-
-@misc{jaxa2023a,
-	title = {{JAXA} {Satellite} {Navigator} / {Space} {Technology} {Directorate} {I}},
-	url = {https://www.satnavi.jaxa.jp/en/},
-	urldate = {2024-01-23},
-	author = {{JAXA}},
-	year = {2023},
-	file = {JAXA Satellite Navigator / Space Technology Directorate I:C\:\\Users\\Soki\\Zotero\\storage\\ZRN3VK7M\\en.html:text/html},
-}
-
-@misc{nasaearthsciencedatasystems2020,
-	type = {Backgrounder},
-	title = {What is {Synthetic} {Aperture} {Radar}?},
-	shorttitle = {What is {Synthetic} {Aperture} {Radar}?},
-	url = {https://www.earthdata.nasa.gov/learn/backgrounders/what-is-sar},
-	abstract = {Background information on synthetic aperture radar, with details on wavelength and frequency, polarization, scattering mechanisms, and interferometry.},
-	language = {en},
-	urldate = {2024-01-23},
-	journal = {Earthdata},
-	author = {{NASA Earth Science Data Systems}},
-	month = apr,
-	year = {2020},
-	note = {Publisher: Earth Science Data Systems, NASA},
-	file = {Snapshot:C\:\\Users\\Soki\\Zotero\\storage\\APNXNT4Y\\what-is-sar.html:text/html},
+@misc{jaxa2011,
+  title = {Emergency {{Observation}} of {{Magnitude-9}}.0 {{Earthquake}} off the {{Pacific}} Coast of {{Tohoku-Kanto District}} in {{Japan}} in 2011 by {{AVNIR-2}} Onboard "{{Daichi}}" ({{ALOS}})},
+  author = {{JAXA}},
+  year = {2011},
+  journal = {Observing of disaster by ALOS},
+  urldate = {2024-01-23},
+  howpublished = {https://www.eorc.jaxa.jp/ALOS/en/img\_up/dis\_opt\_tohokueq\_110314.htm},
+  file = {C:\Users\Soki\Zotero\storage\ASGX8ST4\dis_opt_tohokueq_110314.html}
 }
 
 @misc{jaxa2011a,
-	title = {陸域観測技術衛星「だいち」({ALOS})による東日本大震災の緊急観測結果(21)},
-	url = {https://www.eorc.jaxa.jp/ALOS/img_up/jdis_opt_tohokueq_110328.htm},
-	urldate = {2024-01-23},
-	journal = {ALOSによる災害観測},
-	author = {{JAXA}},
-	year = {2011},
-	file = {ALOSによる災害観測:C\:\\Users\\Soki\\Zotero\\storage\\SJM7IRHW\\jdis_opt_tohokueq_110328.html:text/html},
-}
-
-@misc{jaxa2011,
-	title = {Emergency {Observation} of {Magnitude}-9.0 {Earthquake} off the {Pacific} coast of {Tohoku}-{Kanto} {District} in {Japan} in 2011 by {AVNIR}-2 onboard "{Daichi}" ({ALOS})},
-	url = {https://www.eorc.jaxa.jp/ALOS/en/img_up/dis_opt_tohokueq_110314.htm},
-	urldate = {2024-01-23},
-	journal = {Observing of disaster by ALOS},
-	author = {{JAXA}},
-	year = {2011},
-	file = {Observing of disaster by ALOS:C\:\\Users\\Soki\\Zotero\\storage\\ASGX8ST4\\dis_opt_tohokueq_110314.html:text/html},
-}
-
-@misc{jaxa2024,
-	title = {Dataset {\textbar} {ALOS}@{EORC}},
-	url = {https://www.eorc.jaxa.jp/ALOS/en/index_e.htm},
-	abstract = {Observed images, research and application examples using ALOS (PRISM, AVNIR-2 and PALSAR), ALOS-2 (PALSAR-2) and ALOS-3.},
-	language = {en},
-	urldate = {2024-01-23},
-	journal = {ALOS@EORC Homepage},
-	author = {{JAXA}},
-	year = {2024},
-	file = {Snapshot:C\:\\Users\\Soki\\Zotero\\storage\\JKNLF5UM\\fnf_e.html:text/html},
+  title = {陸域観測技術衛星「だいち」({{ALOS}})による東日本大震災の緊急観測結果(21)},
+  author = {{JAXA}},
+  year = {2011},
+  journal = {ALOSによる災害観測},
+  urldate = {2024-01-23},
+  howpublished = {https://www.eorc.jaxa.jp/ALOS/img\_up/jdis\_opt\_tohokueq\_110328.htm},
+  file = {C:\Users\Soki\Zotero\storage\SJM7IRHW\jdis_opt_tohokueq_110328.html}
 }
 
 @misc{jaxa2023,
-	title = {{ALOS}-2 observations of earthquakes in southeastern {Turkey} in 2023 ({Updated} on {March} 2) – {JAXA} {Earth}-graphy / {Space} {Technology} {Directorate} {I}},
-	url = {https://earth.jaxa.jp/en/earthview/2023/02/14/7381/index.html},
-	urldate = {2024-01-24},
-	author = {{JAXA}},
-	month = feb,
-	year = {2023},
-	file = {ALOS-2 observations of earthquakes in southeastern Turkey in 2023 (Updated on March 2) – JAXA Earth-graphy / Space Technology Directorate I:C\:\\Users\\Soki\\Zotero\\storage\\KLKW7TAP\\index.html:text/html},
+  title = {{{ALOS-2}} Observations of Earthquakes in Southeastern {{Turkey}} in 2023 ({{Updated}} on {{March}} 2) -- {{JAXA Earth-graphy}} / {{Space Technology Directorate I}}},
+  author = {{JAXA}},
+  year = {2023},
+  month = feb,
+  urldate = {2024-01-24},
+  howpublished = {https://earth.jaxa.jp/en/earthview/2023/02/14/7381/index.html},
+  file = {C:\Users\Soki\Zotero\storage\KLKW7TAP\index.html}
+}
+
+@misc{jaxa2023a,
+  title = {{{JAXA Satellite Navigator}} / {{Space Technology Directorate I}}},
+  author = {{JAXA}},
+  year = {2023},
+  urldate = {2024-01-23},
+  howpublished = {https://www.satnavi.jaxa.jp/en/},
+  file = {C:\Users\Soki\Zotero\storage\ZRN3VK7M\en.html}
+}
+
+@misc{jaxa2024,
+  title = {Dataset {\textbar} {{ALOS}}@{{EORC}}},
+  author = {{JAXA}},
+  year = {2024},
+  journal = {ALOS@EORC Homepage},
+  urldate = {2024-01-23},
+  abstract = {Observed images, research and application examples using ALOS (PRISM, AVNIR-2 and PALSAR), ALOS-2 (PALSAR-2) and ALOS-3.},
+  howpublished = {https://www.eorc.jaxa.jp/ALOS/en/index\_e.htm},
+  langid = {english},
+  file = {C:\Users\Soki\Zotero\storage\JKNLF5UM\fnf_e.html}
+}
+
+@misc{nasaearthsciencedatasystems2020,
+  type = {Backgrounder},
+  title = {What Is {{Synthetic Aperture Radar}}?},
+  shorttitle = {What Is {{Synthetic Aperture Radar}}?},
+  author = {{NASA Earth Science Data Systems}},
+  year = {2020},
+  month = apr,
+  journal = {Earthdata},
+  publisher = {Earth Science Data Systems, NASA},
+  urldate = {2024-01-23},
+  abstract = {Background information on synthetic aperture radar, with details on wavelength and frequency, polarization, scattering mechanisms, and interferometry.},
+  howpublished = {https://www.earthdata.nasa.gov/learn/backgrounders/what-is-sar},
+  langid = {english},
+  file = {C:\Users\Soki\Zotero\storage\APNXNT4Y\what-is-sar.html}
+}
+
+@article{whittle2012,
+  title = {Detection of Tropical Deforestation Using {{ALOS-PALSAR}}: {{A Sumatran}} Case Study},
+  shorttitle = {Detection of Tropical Deforestation Using {{ALOS-PALSAR}}},
+  author = {Whittle, Martin and Quegan, Shaun and Uryu, Yumiko and St{\"u}ewe, Michael and Yulianto, Kokok},
+  year = {2012},
+  month = sep,
+  journal = {Remote Sensing of Environment},
+  volume = {124},
+  pages = {83--98},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2012.04.027},
+  urldate = {2024-03-21},
+  abstract = {Indonesia has one of the highest rates of deforestation in the world, with a significant impact on the planetary carbon balance and loss of biodiversity. It also covers a vast and often inaccessible area frequently obscured by clouds, making accurate, timely monitoring of its forests difficult. Spaceborne Synthetic Aperture Radar (SAR) images are unhindered by clouds and can provide clear images whenever there is a satellite pass, hence provide a potentially important tool for monitoring forest changes. Over Sumatra, the JAXA Advanced Land Observing Satellite (ALOS) PALSAR L-band radar provided both ScanSAR HH polarisation with repeat images every 46days, thus providing much more frequent clear imagery than other available rapid deforestation monitoring tools, and approximately annual Fine-Beam Dual (FBD) image pairs with HH and HV polarisations. Temporal analysis of ScanSAR images shows that deforestation in the Sumatran province of Riau can be identified by large values of the temporal standard deviation, but high detection rates are associated with high false alarm rates, particularly in swamp forest. There does not appear to be a reliable signature of the onset of forest disturbance in the ScanSAR time-series. Deforestation can also be detected in annual FBD data by combining increases and decreases in both the HH and HV channels, since the four types of change are complementary; these different polarisation responses indicate a variety of physical processes that may be involved in the radar signature of deforestation. Significant improvements in performance are possible by combining FBD and ScanSAR data, giving 72\% detection of deforestation for a false alarm rate (detection of deforestation in undisturbed forest) of 20\%. Error analysis based on (a) likely errors in the Landsat data used to provide a reference for deforestation and (b) differences between the times of acquisition of the Landsat data and the FBD data suggest that the true detection rate for the FBD data is underestimated. All the analysis in the paper uses fully automatic methods, but it is likely that false alarms in the ScanSAR data due to periodic flooding could be reduced by human inspection. The performance figures reported here could also be improved if knowledge about the locations of dry and swamp forest was included in the methodology.},
+  keywords = {ALOS PALSAR,Change detection,Forest monitoring,Tropical deforestation},
+  file = {C:\Users\Soki\Zotero\storage\EB6QZT86\S0034425712002039.html}
 }
